RH-2007-08-20-0: Enhancem.: o methods for reading hedeby pid files added
                            o new method write_remote_file added
                 Review:    CR

CR-2007-08-17-1: Bugfix:    o compile_source() ignores compile errors
                 Issue:     143
                 Review:    RH

CR-2007-08-17-0: Enhancem.: o hedeby: added error message for distinst
                 Bugfix:    o hedeby: testsuite tries to chown not existent
                              spool directory
                 Issue:     90 (hedeby issue)
                 Issue:     86 (hedeby issue)
                 Review:    RH

CR-2007-08-14-0: Cleanup:   o compile_source(): if only compile hooks are
                                 executed (ts-menu 50) ) the update_source
                                 procedure is skipped for GE source update
                 Bugfix:    o hedeby: tcl error when compile hedeby binaries
                 Bugfix:    o hedeby: Add check that dist is installed after 
                                      compilation
                 Issue:     81 (hedeby issue)
                 Issue:     76 (hedeby issue)
                 Review:    RH

CR-2007-08-16-0: Cleanup:   qmaster/advance_reservation test:
                            The "check_init_level_procedure" was used to
                            setup test specific environment. This is not the
                            intention of this callback. Test specific
                            settings should be done in the 
                            "check_setup_function".
                 Review:    AA

LP-2007-08-16-0: Bugfix:    Testsuite works again with maintrunk
                 Review:    MB

RN-2007-08-16-0: Bugfix:    o Added extra test in qconf -Mattr in
                              qconf_add_delete_modify_replace_attr 
                 Issue:     2327
                 Bugster:   6578213
                 Review:    JG
